--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grupo_48a",
+  "name": "grupo_48",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
@@ -9,7 +9,6 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
 }
